--- a/src/Presentation/SmartStore.Web/Views/Order/Details.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/Details.cshtml
@@ -136,6 +136,15 @@
 				<h5 class="text-muted">@T("Order.Order#")</h5>
 				<div>@Model.OrderNumber</div>
 			</div>
+
+			@if (Model.DisplayPurchaseOrderNumber)
+			{
+				<div class="col-6 col-sm-auto pb-3">
+					<h5 class="text-muted">@T("Order.PurchaseOrderNumber")</h5>
+					<div>@Model.PurchaseOrderNumber</div>
+				</div>
+			}
+
 			<div class="col-6 col-sm-auto pb-3">
 				<h5 class="text-muted">@T("Order.OrderStatus")</h5>
 				<div>@Model.OrderStatus</div>
@@ -147,209 +156,193 @@
 		</div>
 
         @{ Html.RenderWidget("orderdetails_page_overview"); }
-
-        <hr />
        
-        <div class="order-details-box row">
-            
-            <div class="billinginfo col-md-6">
-                <div class="title">
-                    <strong>@T("Order.BillingAddress"):</strong>
-                </div>
-                <div class="name">
-                    @Model.BillingAddress.FirstName @Model.BillingAddress.LastName
-                </div>
-                <div class="email">
-                    @T("Order.Email"): @Model.BillingAddress.Email
-                </div>
-                @if (Model.BillingAddress.PhoneEnabled && Model.BillingAddress.PhoneNumber.HasValue())
-                {
-                    <div class="phone">
-                        @T("Order.Phone"): @Model.BillingAddress.PhoneNumber
-                    </div>
-                }
-                @if (Model.BillingAddress.FaxEnabled && Model.BillingAddress.FaxNumber.HasValue())
-                {
-                    <div class="fax">
-                        @T("Order.Fax"): @Model.BillingAddress.FaxNumber
-                    </div>
-                }
-                @if (Model.BillingAddress.CompanyEnabled && !String.IsNullOrEmpty(Model.BillingAddress.Company))
-                {
-                    <div class="company">
-                        @Model.BillingAddress.Company
-                    </div>
-                }
-                @if (Model.BillingAddress.StreetAddressEnabled)
-                {
-                    <div class="address1">
-                        @Model.BillingAddress.Address1
-                    </div>
-                }
-                @if (Model.BillingAddress.StreetAddress2Enabled && !String.IsNullOrEmpty(Model.BillingAddress.Address2))
-                {
-                    <div class="address2">
-                        @Model.BillingAddress.Address2
-                    </div>
-                }
+		<div class="card card-block order-details-box">
+			<div class="row">
+				<div class="col-md-8">
+					<div class="row">
+						<div class="col mb-4 mb-lg-0 billinginfo">
+							<h5>@T("Order.BillingAddress")</h5>
+							<div class="name">
+								@Model.BillingAddress.FirstName @Model.BillingAddress.LastName
+							</div>
+							<div class="email">
+								@T("Order.Email"): @Model.BillingAddress.Email
+							</div>
+							@if (Model.BillingAddress.PhoneEnabled && Model.BillingAddress.PhoneNumber.HasValue())
+							{
+								<div class="phone">
+									@T("Order.Phone"): @Model.BillingAddress.PhoneNumber
+								</div>
+							}
+							@if (Model.BillingAddress.FaxEnabled && Model.BillingAddress.FaxNumber.HasValue())
+							{
+								<div class="fax">
+									@T("Order.Fax"): @Model.BillingAddress.FaxNumber
+								</div>
+							}
+							@if (Model.BillingAddress.CompanyEnabled && !String.IsNullOrEmpty(Model.BillingAddress.Company))
+							{
+								<div class="company">
+									@Model.BillingAddress.Company
+								</div>
+							}
+							@if (Model.BillingAddress.StreetAddressEnabled)
+							{
+								<div class="address1">
+									@Model.BillingAddress.Address1
+								</div>
+							}
+							@if (Model.BillingAddress.StreetAddress2Enabled && !String.IsNullOrEmpty(Model.BillingAddress.Address2))
+							{
+								<div class="address2">
+									@Model.BillingAddress.Address2
+								</div>
+							}
 
-                @if (Model.BillingAddress.CityEnabled || Model.BillingAddress.StateProvinceEnabled || Model.BillingAddress.ZipPostalCodeEnabled)
-                {
-                    <div class="city-state-zip">
-                        @if (Model.BillingAddress.CityEnabled)
-                        {
-                            @Model.BillingAddress.City
-                        }
-                        @if (Model.BillingAddress.CityEnabled && (Model.BillingAddress.StateProvinceEnabled || Model.BillingAddress.ZipPostalCodeEnabled))
-                        {
-                            <text>,</text>
-                        }
-                        @if (Model.BillingAddress.StateProvinceEnabled)
-                        {
-                            @Model.BillingAddress.StateProvinceName
-                        }
-                        @if (Model.BillingAddress.ZipPostalCodeEnabled)
-                        {
-                            @Model.BillingAddress.ZipPostalCode
-                        }
-                    </div>
-                }
-                @if (Model.BillingAddress.CountryEnabled && !String.IsNullOrEmpty(Model.BillingAddress.CountryName))
-                {
-                    <div class="country">
-                        @Model.BillingAddress.CountryName
-                    </div>
-                }
-                @if (!String.IsNullOrEmpty(Model.VatNumber))
-                {
-                    <div class="vat">
-                        <div class="vat-label">
-                            <strong>@T("Order.VATNumber")</strong>
-                        </div>
-                        <div class="vat-value">
-                            @Model.VatNumber
-                        </div>
-                    </div>
-                }
-                @if (!String.IsNullOrEmpty(Model.PaymentMethod))
-                {
-                    <p class="payment-method">
-                        <div class="payment-method-label">
-                            <strong>@T("Order.PaymentMethod"):</strong>
-                        </div>
-                        <div class="payment-method-value">
-                            @Model.PaymentMethod
-                        </div>
-                    </p>
+							@if (Model.BillingAddress.CityEnabled || Model.BillingAddress.StateProvinceEnabled || Model.BillingAddress.ZipPostalCodeEnabled)
+							{
+								<div class="city-state-zip">
+									@if (Model.BillingAddress.CityEnabled)
+									{
+										@Model.BillingAddress.City
+									}
+									@if (Model.BillingAddress.CityEnabled && (Model.BillingAddress.StateProvinceEnabled || Model.BillingAddress.ZipPostalCodeEnabled))
+									{
+										<text>,</text>
+									}
+									@if (Model.BillingAddress.StateProvinceEnabled)
+									{
+										@Model.BillingAddress.StateProvinceName
+									}
+									@if (Model.BillingAddress.ZipPostalCodeEnabled)
+									{
+										@Model.BillingAddress.ZipPostalCode
+									}
+								</div>
+							}
+							@if (Model.BillingAddress.CountryEnabled && !String.IsNullOrEmpty(Model.BillingAddress.CountryName))
+							{
+								<div class="country">
+									@Model.BillingAddress.CountryName
+								</div>
+							}
+							@if (!String.IsNullOrEmpty(Model.VatNumber))
+							{
+								<div class="vat">
+									<div class="vat-label">
+										<strong>@T("Order.VATNumber")</strong>
+									</div>
+									<div class="vat-value">
+										@Model.VatNumber
+									</div>
+								</div>
+							}
+						</div>
 
-                    @*Completing payment support (for redirection payment methods)*@
-                if (Model.CanRePostProcessPayment)
-                {
-                        <div class="repost">
-                            @using (Html.BeginForm())
-                            {
-                                <input type="submit" name="repost-payment" value="@T("Order.CompletePayment")" class="btn btn-primary re-order-button btn-above" />
-                                <div class="hint text-muted">@T("Order.CompletePayment.Hint")</div>
-                            }
-                        </div>
-                    }
-                }
+						@if (Model.IsShippable)
+						{
+							<div class="col mb-4 mb-lg-0 shippinginfo">
+								<h5>@T("Order.ShippingAddress")</h5>
+								<div class="name">
+									@Model.ShippingAddress.FirstName @Model.ShippingAddress.LastName
+								</div>
+								<div class="email">
+									@T("Order.Email"): @Model.ShippingAddress.Email
+								</div>
+								@if (Model.ShippingAddress.PhoneEnabled)
+								{
+									<div class="phone">
+										@T("Order.Phone"): @Model.ShippingAddress.PhoneNumber
+									</div>
+								}
+								@if (Model.ShippingAddress.FaxEnabled)
+								{
+									<div class="fax">
+										@T("Order.Fax"): @Model.ShippingAddress.FaxNumber
+									</div>
+								}
+								@if (Model.ShippingAddress.CompanyEnabled && !String.IsNullOrEmpty(Model.ShippingAddress.Company))
+								{
+									<div class="company">
+										@Model.ShippingAddress.Company
+									</div>
+								}
+								@if (Model.ShippingAddress.StreetAddressEnabled)
+								{
+									<div class="address1">
+										@Model.ShippingAddress.Address1
+									</div>
+								}
+								@if (Model.ShippingAddress.StreetAddress2Enabled && !String.IsNullOrEmpty(Model.ShippingAddress.Address2))
+								{
+									<div class="address2">
+										@Model.ShippingAddress.Address2
+									</div>
+								}
+								@if (Model.ShippingAddress.CityEnabled || Model.ShippingAddress.StateProvinceEnabled || Model.ShippingAddress.ZipPostalCodeEnabled)
+								{
+									<div class="city-state-zip">
+										@if (Model.ShippingAddress.CityEnabled)
+										{
+											@Model.ShippingAddress.City
+										}
+										@if (Model.ShippingAddress.CityEnabled && (Model.ShippingAddress.StateProvinceEnabled || Model.ShippingAddress.ZipPostalCodeEnabled))
+										{
+											<text>,</text>
+										}
+										@if (Model.ShippingAddress.StateProvinceEnabled)
+										{
+											@Model.ShippingAddress.StateProvinceName
+										}
+										@if (Model.ShippingAddress.ZipPostalCodeEnabled)
+										{
+											@Model.ShippingAddress.ZipPostalCode
+										}
+									</div>
+								}
+								@if (Model.ShippingAddress.CountryEnabled && !String.IsNullOrEmpty(Model.ShippingAddress.CountryName))
+								{
+									<div class="country">
+										@Model.ShippingAddress.CountryName
+									</div>
+								}
+							</div>
+						}
+					</div>
+				</div>
 
-                @if (Model.DisplayPurchaseOrderNumber)
-                {
-                    <div class="po">
-                        <div class="po-label">
-                            <strong>@T("Order.PurchaseOrderNumber")</strong>
-                        </div>
-                        <div class="po-value">
-                            @Model.PurchaseOrderNumber
-                        </div>
-                    </div>
-                }
-            </div>
-                    
-            @if (Model.IsShippable)
-            {
-                <div class="shippinginfo col-md-6">
-                    <div class="title">
-                        <strong>
-                            @T("Order.ShippingAddress"):
-                        </strong>
-                    </div>
-                    <div class="name">
-                        @Model.ShippingAddress.FirstName @Model.ShippingAddress.LastName
-                    </div>
-                    <div class="email">
-                        @T("Order.Email"): @Model.ShippingAddress.Email
-                    </div>
-                    @if (Model.ShippingAddress.PhoneEnabled)
-                    {
-                        <div class="phone">
-                            @T("Order.Phone"): @Model.ShippingAddress.PhoneNumber
-                        </div>
-                    }
-                    @if (Model.ShippingAddress.FaxEnabled)
-                    {
-                        <div class="fax">
-                            @T("Order.Fax"): @Model.ShippingAddress.FaxNumber
-                        </div>
-                    }
-                    @if (Model.ShippingAddress.CompanyEnabled && !String.IsNullOrEmpty(Model.ShippingAddress.Company))
-                    {
-                        <div class="company">
-                            @Model.ShippingAddress.Company
-                        </div>
-                    }
-                    @if (Model.ShippingAddress.StreetAddressEnabled)
-                    {
-                        <div class="address1">
-                            @Model.ShippingAddress.Address1
-                        </div>
-                    }
-                    @if (Model.ShippingAddress.StreetAddress2Enabled && !String.IsNullOrEmpty(Model.ShippingAddress.Address2))
-                    {
-                        <div class="address2">
-                            @Model.ShippingAddress.Address2
-                        </div>
-                    }
-                    @if (Model.ShippingAddress.CityEnabled || Model.ShippingAddress.StateProvinceEnabled || Model.ShippingAddress.ZipPostalCodeEnabled)
-                    {
-                        <div class="city-state-zip">
-                            @if (Model.ShippingAddress.CityEnabled)
-                            {
-                                @Model.ShippingAddress.City
-                            }
-                            @if (Model.ShippingAddress.CityEnabled && (Model.ShippingAddress.StateProvinceEnabled || Model.ShippingAddress.ZipPostalCodeEnabled))
-                            {
-                                <text>,</text>
-                            }
-                            @if (Model.ShippingAddress.StateProvinceEnabled)
-                            {
-                                @Model.ShippingAddress.StateProvinceName
-                            }
-                            @if (Model.ShippingAddress.ZipPostalCodeEnabled)
-                            {
-                                @Model.ShippingAddress.ZipPostalCode
-                            }
-                        </div>
-                    }
-                    @if (Model.ShippingAddress.CountryEnabled && !String.IsNullOrEmpty(Model.ShippingAddress.CountryName))
-                    {
-                        <div class="country">
-                            @Model.ShippingAddress.CountryName
-                        </div>
-                    }
-                    <p class="shipping-method">
-                        <div class="shipping-method-label">
-                            <strong>@T("Order.ShippingMethod"):</strong>
-                        </div>
-                        <div class="shipping-method-value">
-                            @Model.ShippingMethod
-                        </div>
-                    </p>
-                </div>
-            }
-        </div>
+				@if (Model.PaymentMethod.HasValue() || Model.IsShippable)
+				{
+					<div class="col-md-4">
+						<div class="row">
+							<div class="col">
+								@if (Model.IsShippable)
+								{
+									<h5>@T("Order.ShippingMethod")</h5>
+									<p>@Model.ShippingMethod</p>
+								}
+								@if (Model.PaymentMethod.HasValue())
+								{
+									<h5>@T("Order.PaymentMethod")</h5>
+									<p>@Model.PaymentMethod</p>
+
+									if (Model.CanRePostProcessPayment)
+									{
+										using (Html.BeginForm())
+										{
+											<input type="submit" name="repost-payment" value="@T("Order.CompletePayment")" class="btn btn-primary btn-sm btn-block re-order-button btn-above" />
+											<div class="small text-muted pt-2">@T("Order.CompletePayment.Hint")</div>
+										}
+									}
+								}
+							</div>
+						</div>
+					</div>
+				}
+			</div>
+
+		</div>
 
         @{ Html.RenderWidget("orderdetails_page_beforeproducts"); }
 
