Updated file upload control for current bootstrap version

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_misc.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_misc.scss
@@ -131,3 +131,12 @@ body.popup {
 		margin-bottom: 0;
 	}
 }
+
+// overwrite for bluimp file upload control
+.fileupload .fileupload-progress.collapse {
+    display: none !important; 
+    width: 100%;
+}
+.fileupload .fileupload-progress.collapse.show {
+    display: block !important; 
+}
