--- a/src/Presentation/SmartStore.Web/Views/Shared/ChoiceTemplates/Choice.FileUpload.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/ChoiceTemplates/Choice.FileUpload.cshtml
@@ -42,7 +42,7 @@
 	</button>
 
 	<!-- The global progress information -->
-	<div class="fileupload-progress fade" style="width: 200px">
+	<div class="fileupload-progress fade collapse mt-2">
 		<!-- The global progress bar -->
 		<div class="progress active">
 			<div class="progress-bar bg-success progress-bar-striped" style="width:0%;" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
@@ -51,7 +51,7 @@
 		<div class="progress-extended">&nbsp;</div>
 	</div>
 
-	<div class="uploaded-file d-none"></div>
+	<div class="uploaded-file d-none mt-2"></div>
 </div>
 
 <script type="text/javascript">
