Added option to specify whether to show popular product tags on the homepage.

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
@@ -342,6 +342,15 @@
                 @Html.ValidationMessageFor(model => model.ShowDefaultDeliveryTime)
             </td>
         </tr>
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.ShowPopularProductTagsOnHomepage)
+            </td>
+            <td class="adminData">
+                @Html.SettingEditorFor(model => model.ShowPopularProductTagsOnHomepage)
+                @Html.ValidationMessageFor(model => model.ShowPopularProductTagsOnHomepage)
+            </td>
+        </tr>
     </table>
 
     <table class="adminContent">
