--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.TierPrices.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.TierPrices.cshtml
@@ -21,34 +21,28 @@
 	<h6 class="font-weight-medium mb-2">
 		@T("Products.TierPrices")
 	</h6>
-    <div class="table-responsive">
-        <table class="table table-bordered table-sm">
-            <thead>
-                <tr>
-					<th>
-						@T("Products.TierPrices.Quantity")
+	<table class="table table-bordered table-sm table-responsive table-tierprices@(Model.Count > 5 ? " d-block" : "")">
+		<thead>
+			<tr>
+				<th>@T("Products.TierPrices.Quantity")</th>
+				@foreach (var tierPrice in Model.Take(200))
+				{
+					<th class="pd-tierprice-qty text-center">
+						@(tierPrice.Quantity)+
 					</th>
-					@foreach (var tierPrice in Model.Take(200))
-					{
-						<th class="pd-tierprice-qty text-center">    
-							@(tierPrice.Quantity)+
-						</th>
-					}
-				</tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>
-						@T("Products.TierPrices.Price")
-                    </th>
-                    @foreach (var tierPrice in Model.Take(200))
-                    {
-						<td class="pd-tierprice-price text-nowrap text-center">
-							@tierPrice.Price
-						</td>
-                    }
-                </tr>
-            </tbody>
-        </table>
-    </div>
+				}
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<th>@T("Products.TierPrices.Price")</th>
+				@foreach (var tierPrice in Model.Take(200))
+				{
+					<td class="pd-tierprice-price text-nowrap text-center">
+						@tierPrice.Price
+					</td>
+				}
+			</tr>
+		</tbody>
+	</table>
 </div>
