--- a/src/Presentation/SmartStore.Web/Views/Boards/Partials/_CreateUpdateTopic.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/Partials/_CreateUpdateTopic.cshtml
@@ -70,7 +70,10 @@
 
         <div class="row">
             <div class="col-sm-push-2 col-sm-10 mt-3">
-                <button type="submit" class="btn btn-primary"><i class="fa fa-reply"></i>@T("Forum.Submit")</button>
+                <button type="submit" class="btn btn-primary">
+					<i class="fa fa-reply"></i>
+					@T("Forum.Submit")
+				</button>
                 <button class="btn" onclick="setLocation('@Url.RouteUrl("ForumSlug", new { id = Model.ForumId, slug = Model.ForumSeName }) '); return false;">
                     <i class="fa fa-times"></i>
                     @T("Forum.Cancel")
