--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/EstimateShipping.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/EstimateShipping.cshtml
@@ -41,7 +41,7 @@
         });
     </script>
 
-    <div class="shipping">
+    <div class="shipping mb-5">
         <div class="estimate-shipping cart-box card">
             <h4 class="title card-header">@T("ShoppingCart.EstimateShipping")</h4>
 
