--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/_GiftCardBox.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/_GiftCardBox.cshtml
@@ -2,7 +2,7 @@
 @using SmartStore.Web.Models.ShoppingCart;
 @if (Model.Display)
 {
-    <div class="giftcard-box cart-box card">
+    <div class="giftcard-box cart-box card mb-5">
         <h4 class="title card-header">@T("ShoppingCart.GiftCardCouponCode")</h4>
         <div class="card-block">
 
