--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/OffCanvasShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/OffCanvasShoppingCart.cshtml
@@ -115,7 +115,7 @@
 						</div>
 
 						<div class="ml-auto text-nowrap">
-                            <a class="btn btn-secondary btn-sm btn-icon ajax-cart-link" title='@T("ShoppingCart.MoveToWishlist")'
+                            <a class="btn btn-secondary btn-sm btn-icon ajax-cart-link" title="@T("ShoppingCart.MoveToWishlist")"
                                 href="#"
                                 rel="nofollow"
                                 data-href="@Url.Action("MoveItemBetweenCartAndWishlist", "ShoppingCart", new { cartItemId = item.Id, cartType = ShoppingCartType.ShoppingCart })"
@@ -124,14 +124,13 @@
                                 data-action="addfromcart">
                                 <i class="fa fa-heart-o"></i>
                             </a>   
-							<a class="btn btn-secondary btn-to-danger btn-sm btn-icon remove ajax-cart-link"
+							<a class="btn btn-secondary btn-to-danger btn-sm btn-icon remove ajax-cart-link" title="@T("Common.Remove")"
 							   href="#"
 							   rel="nofollow"
 							   data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id })'
 							   data-name="@item.ProductName"
 							   data-type="cart"
-							   data-action="remove"
-							   title='@T("Common.Remove")'>
+							   data-action="remove">
 								<i class="fa fa-trash-o"></i>
 							</a>
 						</div>
