--- a/src/Presentation/SmartStore.Web/Views/Home/ContactUs.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Home/ContactUs.cshtml
@@ -9,74 +9,71 @@
 }
 
 <div class="page contact-page">
-    @{ Html.RenderAction("TopicBlock", "Topic", new { systemName = "ContactUs" }); }
+	<div class="page-title">
+		<h1 class="h2">@T("PageTitle.ContactUs")</h1>
+	</div>
+
+    @{ Html.RenderAction("TopicBlock", "Topic", new { systemName = "ContactUs", isLead = true, bodyOnly = true }); }
 
     <div class="page-body">
+
         @{ Html.RenderWidget("contactus_top"); }
 
         @if (Model.SuccessfullySent)
         {
-            <div class="alert alert-info fade show">
-                <button class="close" data-dismiss="alert">x</button>
+            <div class="alert alert-success">
                 @Model.Result
             </div>        
         }
         else
         {
-            using (Html.BeginRouteForm("ContactUs", FormMethod.Post, new { @class = "form-horizontal" }))
+            using (Html.BeginRouteForm("ContactUs", FormMethod.Post, new { @class = "contact-form" }))
             {
-            <fieldset>
+				if (!ViewData.ModelState.IsValid)
+				{
+					@Html.ValidationSummary(true)
+				}
 
-                @if (!ViewData.ModelState.IsValid)
-                {
-                    @Html.ValidationSummary(true)
-                }
+				<div class="form-group row">
+					@Html.LabelFor(model => model.FullName, new { @class = "col-sm-3 col-form-label required" })
+					<div class="col-sm-9">
+						@Html.TextBoxFor(model => model.FullName, new { @class = "form-control", placeholder = T("ContactUs.FullName.Hint") })
+						@Html.ValidationMessageFor(model => model.FullName)
+					</div>
+				</div>
 
-                <legend>@T("PageTitle.ContactUs")</legend>
+				<div class="form-group row">
+					@Html.LabelFor(model => model.Email, new { @class = "col-sm-3 col-form-label required" })
+					<div class="col-sm-9">
+						@Html.TextBoxFor(model => model.Email, new { @class = "form-control", placeholder = T("ContactUs.Email.Hint") })
+						@Html.ValidationMessageFor(model => model.Email)
+					</div>
+				</div>
 
-                <div class="form-group row">
-                    @Html.LabelFor(model => model.FullName, new { @class = "col-sm-2 form-control-label", @for = "FullName" })
-                    <div class="col-sm-10">
-                        @Html.TextBoxFor(model => model.FullName, new { @class = "form-control", placeholder = T("ContactUs.FullName.Hint") })
-                        @Html.ValidationMessageFor(model => model.FullName)
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    @Html.LabelFor(model => model.Email, new { @class = "col-sm-2 form-control-label required", @for = "Email" })
-                    <div class="col-sm-10">
-                        @Html.TextBoxFor(model => model.Email, new { @class = "form-control", placeholder = T("ContactUs.Email.Hint") })
-                        @Html.ValidationMessageFor(model => model.Email)
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    @Html.LabelFor(model => model.Enquiry, new { @class = "col-sm-2 form-control-label required", @for = "Enquiry" })
-                    <div class="col-sm-10">
-                        @Html.TextAreaFor(model => model.Enquiry, new { @class = "form-control", rows = "4", placeholder = T("ContactUs.Enquiry.Hint") })
-                        @Html.ValidationMessageFor(model => model.Enquiry)
-                    </div>
-                </div>
+				<div class="form-group row">
+					@Html.LabelFor(model => model.Enquiry, new { @class = "col-sm-3 col-form-label required" })
+					<div class="col-sm-9">
+						@Html.TextAreaFor(model => model.Enquiry, new { @class = "form-control", rows = "6", placeholder = T("ContactUs.Enquiry.Hint") })
+						@Html.ValidationMessageFor(model => model.Enquiry)
+					</div>
+				</div>
                 
-                @if (Model.DisplayCaptcha)
-                {
-                    <div class="form-group row">
-                        <div class="col-sm-offset-2 col-sm-10 captcha-box">
-                            @Html.Raw(Html.GenerateCaptcha())
-                        </div>
-                    </div>
-                }
+				if (Model.DisplayCaptcha)
+				{
+					<div class="form-group row">
+						<div class="col-sm-offset-2 col-sm-10 captcha-box">
+							@Html.Raw(Html.GenerateCaptcha())
+						</div>
+					</div>
+				}
                 
-                <div class="form-group row">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" name="send-email" class="btn btn-primary">
-                            <i class="fa fa-check"></i>
-                            @T("ContactUs.Button")
-                        </button>
-                    </div>
-                </div>
-
-            </fieldset> 
+				<div class="form-group row">
+					<div class="col col-sm-auto offset-sm-3">
+						<button type="submit" name="send-email" class="btn btn-primary btn-lg btn-block">
+							@T("ContactUs.Button")
+						</button>
+					</div>
+				</div>
             }
         }
 
